package survival2d.match.entity.player;

public enum PlayerState {
  LIVE,
  DEAD
}
