@startuml

title __PLAYER's Class Diagram__\n

  namespace survival2d {
    namespace match.entity.player {
      interface survival2d.match.entity.player.Player {
          {abstract} + getAttackDirection()
          {abstract} + getCurrentWeapon()
          {abstract} + getCurrentWeaponIndex()
          {abstract} + getDirection()
          {abstract} + getHead()
          {abstract} + getPlayerId()
          {abstract} + getRotation()
          {abstract} + getSpeed()
          {abstract} + getTeam()
          {abstract} + reloadWeapon()
          {abstract} + setRotation()
          {abstract} + switchWeapon()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.player {
      class survival2d.match.entity.player.PlayerImpl {
          ~ bullets : Map<BulletType, Integer>
          ~ currentWeaponIndex : int
          ~ direction : Vector2D
          ~ hp : double
          ~ items : Map<Item, Integer>
          ~ playerId : String
          ~ position : Vector2D
          ~ rotation : double
          ~ speed : double
          ~ team : int
          ~ weapons : List<Weapon>
          {static} - log : Logger
          + PlayerImpl()
          + equals()
          + getAttackDirection()
          + getBullets()
          + getCurrentWeapon()
          + getCurrentWeaponIndex()
          + getDirection()
          + getHead()
          + getHp()
          + getItems()
          + getPlayerId()
          + getPosition()
          + getRotation()
          + getShape()
          + getSpeed()
          + getTeam()
          + getWeapons()
          + hashCode()
          + reduceHp()
          + reloadWeapon()
          + setBullets()
          + setCurrentWeaponIndex()
          + setDirection()
          + setHead()
          + setHp()
          + setItems()
          + setPlayerId()
          + setPosition()
          + setRotation()
          + setShape()
          + setSpeed()
          + setTeam()
          + setWeapons()
          + switchWeapon()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace survival2d {
    namespace match.entity.player {
      enum PlayerState {
        DEAD
        LIVE
      }
    }
  }
  

  survival2d.match.entity.player.PlayerImpl .up.|> survival2d.match.entity.player.Player
  survival2d.match.entity.player.PlayerImpl o-- survival2d.match.entity.base.Circle : head
  survival2d.match.entity.player.PlayerImpl o-- survival2d.match.entity.base.Circle : shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
